--- a/css/style.css
+++ b/css/style.css
@@ -116,26 +116,25 @@ a{
   margin-top: 0 auto;
 
 }
-.reasons-container{
-  max-width: 1000px;
-  margin: 40px auto 0 auto;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  flex-flow: column;
+.div{
+  display: block;
 }
 .reason{
   background: #3f4e87;
-  padding: 10px;
-  flex-flow: : 90%;
+  padding: 20px;
+  flex-flow: : row wrap;
+  margin: 10px;
   margin-bottom: 10px;
   box-sizing: border-box;
   color: #fff;
   text-align: center;
-  flex-direction: column; 
+  align-items: stretch;
+  justify-content: space-around;
+
 }
 .reason__text{
   margin-top:0 auto;
+
 }
 .reason__icon{
   margin-bottom: 10px;
@@ -149,8 +148,12 @@ a{
 }
 .row{
   display: flex;
-  flex-flow: wrap;
-  
+  flex-wrap: wrap;
+  margin:  0 -10px;
+  padding: 10px;
+
+
+
 }
 .row__no-margin{
   margin: 0;
@@ -161,15 +164,10 @@ a{
 
 }
 .reasons [class*="column"]{
-  display: flex;
-  flex-flow: wrap;
-  flex-direction: row;
-  justify-content: space-around;
+  flex-flow: row wrap;
+  align-content: stretch;
 
 }
-.reason > div:nth-of-type(3n+2) .reason{
-  margin: 5px 10px;
-  }
 
 .col-no-pad{
   padding: 0;
@@ -250,6 +248,9 @@ left: 0; }
  .column-desktop-1-3{
     max-width: 33.33%;
   }
+ .column-phablet-1-2{
+  min-width: 50%;
+ }
  .column-desktop-3-4{
   max-width: 75%;
  }
@@ -263,17 +264,16 @@ left: 0; }
   }
   .column-desktop-1-4{
     max-width: 25%;
-
   }
   .column-desktop-1-3{
     max-width: 33.33%;
   }
+  
   .column-desktop-3-4{
     max-width: 75%;
   }
-  .reason > div:nth-of-type(3n+2) .reason{
-  margin: 5px 10px;
-  max-width: 75%;
-  
+  .reasons [class*="column"]{
+  display: flex;
+  justify-content: space-between;
 }
 }
